# cwcwm

./: meson.build  meson.options
defconfig/: rc.lua
include/cwc/: server.h
include/cwc/desktop/: toplevel.h
include/cwc/input/: cursor.h
nix/: default.nix
src/: luac.c  main.c  meson.build  server.c
src/desktop/: output.c  toplevel.c
src/input/: cursor.c
src/layout/: container.c
